--- a/dev-app-update.yml
+++ b/dev-app-update.yml
@@ -1,3 +1,4 @@
-provider: generic
-url: https://example.com/auto-updates
+provider: github
+releaseType: release
+url: https://github.com/eduardteller/auto-updater-test
 updaterCacheDirName: test-auto-updater-updater
